--- a/.ebextensions/cron.config
+++ b/.ebextensions/cron.config
@@ -1,6 +1,10 @@
 container_commands:
   01_cron_setup:
     command: |
-      echo "*/2 * * * * root cd /var/app/current && /opt/python/run/venv/bin/python bot.py >> /var/log/cron.log 2>&1" > /etc/cron.d/botcron && chmod 644 /etc/cron.d/botcron
-    leader_only: true
+*/2 * * * * cd "/Users/kelsieclaunchmsd/Desktop/hdi to zip" && /opt/python/run/venv/bin/python hdi_data.py >> /var/log/cron.log 2>&1
+
+  02_restart_cron:
+    command: |
+      service crond restart || service cron restart
+
 
